JavaScript OT code works together with the JavaScript code generated by protojs from common.proto

--- a/webclient/javascript/tests/jsot/jsot.html
+++ b/webclient/javascript/tests/jsot/jsot.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>JavaScript OT</title>
+<script src="../../common.pbjson.js" type="text/javascript"></script>
 <script src="../../jsot.js" type="text/javascript"></script>
 </head>
 <body>
@@ -10,70 +11,70 @@
 var doc = new JSOT.Doc();
 doc.content.push("Hallo!");
 
-var ops = new JSOT.DocOp();
-ops.component.push( new JSOT.DocOp.newAnnotationBoundary( [], [ new JSOT.DocOp.newKeyValueUpdate( "bold", null, "true" ) ] ) );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(5) );
-ops.component.push( new JSOT.DocOp.newAnnotationBoundary( [ "bold" ], [ ] ) );
-ops.component.push( new JSOT.DocOp.newCharacters(" ") );
-ops.component.push( new JSOT.DocOp.newElementStart("b") );
-ops.component.push( new JSOT.DocOp.newAnnotationBoundary( [], [ new JSOT.DocOp.newKeyValueUpdate( "italic", null, "true" ) ] ) );
-ops.component.push( new JSOT.DocOp.newCharacters("Welt") );
-ops.component.push( new JSOT.DocOp.newAnnotationBoundary( [ "italic" ], [ ] ) );
-ops.component.push( new JSOT.DocOp.newElementEnd() );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(1) );
-ops.component.push( new JSOT.DocOp.newCharacters(" Bye.") );
+var ops = new protocol.ProtocolDocumentOperation();
+ops.component.push( protocol.ProtocolDocumentOperation.newAnnotationBoundary( [], [ protocol.ProtocolDocumentOperation.newKeyValueUpdate( "bold", null, "true" ) ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(5) );
+ops.component.push( protocol.ProtocolDocumentOperation.newAnnotationBoundary( [ "bold" ], [ ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newCharacters(" ") );
+ops.component.push( protocol.ProtocolDocumentOperation.newElementStart("b") );
+ops.component.push( protocol.ProtocolDocumentOperation.newAnnotationBoundary( [], [ protocol.ProtocolDocumentOperation.newKeyValueUpdate( "italic", null, "true" ) ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newCharacters("Welt") );
+ops.component.push( protocol.ProtocolDocumentOperation.newAnnotationBoundary( [ "italic" ], [ ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newElementEnd() );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(1) );
+ops.component.push( protocol.ProtocolDocumentOperation.newCharacters(" Bye.") );
 
 ops.applyTo(doc);
 
 var result = doc.toString();
 document.getElementById("out").appendChild( document.createTextNode(result) );
 
-ops = new JSOT.DocOp();
-ops.component.push( new JSOT.DocOp.newRetainItemCount(6) );
-ops.component.push( new JSOT.DocOp.newReplaceAttributes( { }, { foo : "bar", "remove" : "me" } ) );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(11) );
+ops = new protocol.ProtocolDocumentOperation();
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(6) );
+ops.component.push( protocol.ProtocolDocumentOperation.newReplaceAttributes( [ ], [ protocol.ProtocolDocumentOperation.newKeyValuePair( "foo", "bar"), protocol.ProtocolDocumentOperation.newKeyValuePair("remove", "me") ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(11) );
 
 ops.applyTo(doc);
 
 result = doc.toString();
 document.getElementById("out").appendChild( document.createTextNode(result) );
 
-ops = new JSOT.DocOp();
-ops.component.push( new JSOT.DocOp.newRetainItemCount(6) );
-ops.component.push( new JSOT.DocOp.newUpdateAttributes( [ new JSOT.DocOp.newKeyValueUpdate( "foo", "bar", "bar2" ), new JSOT.DocOp.newKeyValueUpdate( "remove", "me", null ) ] ) );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(11) );
+ops = new protocol.ProtocolDocumentOperation();
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(6) );
+ops.component.push( protocol.ProtocolDocumentOperation.newUpdateAttributes( [ protocol.ProtocolDocumentOperation.newKeyValueUpdate( "foo", "bar", "bar2" ), protocol.ProtocolDocumentOperation.newKeyValueUpdate( "remove", "me", null ) ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(11) );
 
 ops.applyTo(doc);
 
 result = doc.toString();
 document.getElementById("out").appendChild( document.createTextNode(result) );
 
-ops = new JSOT.DocOp();
-ops.component.push( new JSOT.DocOp.newRetainItemCount(6) );
-ops.component.push( new JSOT.DocOp.newReplaceAttributes( { foo : "bar2" }, { xfoo : "Xbar", name : "Joe" } ) );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(11) );
+ops = new protocol.ProtocolDocumentOperation();
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(6) );
+ops.component.push( protocol.ProtocolDocumentOperation.newReplaceAttributes( [ protocol.ProtocolDocumentOperation.newKeyValuePair( "foo", "bar2" ) ], [ protocol.ProtocolDocumentOperation.newKeyValuePair( "xfoo", "Xbar"), protocol.ProtocolDocumentOperation.newKeyValuePair( "name", "Joe" ) ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(11) );
 
 ops.applyTo(doc);
 
 result = doc.toString();
 document.getElementById("out").appendChild( document.createTextNode(result) );
 
-ops = new JSOT.DocOp();
-ops.component.push( new JSOT.DocOp.newRetainItemCount(2) );
-ops.component.push( new JSOT.DocOp.newDeleteCharacters("ll") );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(2) );
-ops.component.push( new JSOT.DocOp.newDeleteElementStart("b", { xfoo : "Xbar", name : "Joe" }) );
-ops.component.push( new JSOT.DocOp.newDeleteCharacters("Welt") );
-ops.component.push( new JSOT.DocOp.newDeleteElementEnd("b") );
-ops.component.push( new JSOT.DocOp.newRetainItemCount(7) );
+ops = new protocol.ProtocolDocumentOperation();
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(2) );
+ops.component.push( protocol.ProtocolDocumentOperation.newDeleteCharacters("ll") );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(2) );
+ops.component.push( protocol.ProtocolDocumentOperation.newDeleteElementStart("b", [ protocol.ProtocolDocumentOperation.newKeyValuePair( "xfoo", "Xbar"), protocol.ProtocolDocumentOperation.newKeyValuePair("name", "Joe" ) ] ) );
+ops.component.push( protocol.ProtocolDocumentOperation.newDeleteCharacters("Welt") );
+ops.component.push( protocol.ProtocolDocumentOperation.newDeleteElementEnd("b") );
+ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount(7) );
 
 ops.applyTo(doc);
 
 result = doc.toString();
 document.getElementById("out").appendChild( document.createTextNode(result) );
 
-ops = new JSOT.DocOp();
-ops.component.push( new JSOT.DocOp.newDeleteCharacters("Hao ! Bye.") );
+ops = new protocol.ProtocolDocumentOperation();
+ops.component.push( protocol.ProtocolDocumentOperation.newDeleteCharacters("Hao ! Bye.") );
 
 ops.applyTo(doc);
 
